fix z-index issues with tables/modals

--- a/src/styles/components/_tables.scss
+++ b/src/styles/components/_tables.scss
@@ -76,8 +76,8 @@
 
   @media (max-width: $breakpoint-mobile-max) {
     .stats-table--pinned {
+			border-right: 1px solid $color-grey-med;
       position: absolute;
-      z-index: $z-index-default;
     }
 
     .stats-table--spacer {
